# The-AI-Engineer-Challenge

./: pyproject.toml
api/: index.py  requirements.txt
frontend/: next.config.js  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
