[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.18",
    "langchain>=1.3.11",
    "python-dotenv>=1.2.2",
    "ragas>=0.3.0",
    "deepeval>=4.0.7",
    "qdrant-client>=1.18.0",
    "scikit-network>=0.33.5",
    "sentence-transformers>=5.6.0",
    "langsmith>=0.9.2",
    "cohere>=7.0.4",
    "anthropic>=0.112.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-google-vertexai>=3.2.4",
    "httpx>=0.28.1",
]
